@@ -1,5 +1,8 @@
 2004-11-03  Vincent Noel  <vnoel@cox.net>
 
+	* misc.c (MakeErrorDialog): Use new gtk+ HIG message dialogue API.
+	* logrtns.c (OpenLogFile): Ditto.
+
 	* logview.c (toggle_monitor): Prevent enabling monitoring with the
 	key shortcut for zipped files.
 	(logview_search): Disable search for monitored files.
